(fix, modals) fixed the pizza modal window on mobile devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -119,6 +119,13 @@ a {
 	animation: slideOutToRight 0.5s ease forwards;
 }
 
+@media (min-width: 1100px) {
+	.pizza-ingredients {
+		overflow: auto;
+		scrollbar-width: auto;
+	}
+}
+
 @mixin noselect {
 	-webkit-touch-callout: none;
 	/* iOS Safari */
